{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ca9d9016-e311-4f59-9185-a7de542c9695",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Value",
                    "id": "503e53ed-6a72-4b8b-9558-93f99d04cced",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchZero",
                    "type": "Value",
                    "id": "097e858f-6cff-45e9-ae3a-46a8b31d57b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ace95ff1-84d1-44f7-b240-72d7f7a39712",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ddeeacd-7e34-4e92-87c5-1b425267fadf",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchZero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}